--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
+  <link rel="icon" href="./img/favicon.png" type="image/gif" sizes="16x16">
   <title>Hire Nathaniel Ryan Today!</title>
 
   <!-- Bootstrap core CSS -->
@@ -112,7 +113,7 @@
               web development cohort. Provide feedback to curriculum development and technical support teams to improve
               in-class experience for students and staff.</p>
             <ul>
-              <li>Provide technical support and guidance and grade assignments for 60+ students.</li>
+              <li>Provide technical support, guidance and grade assignments for 60+ students.</li>
               <li>Promoted to Primary Teaching Assistant only within 2 months initial hire with excellent work reviews.
               </li>
             </ul>
@@ -122,17 +123,17 @@
               to student inquiries. Assist students over video call to ensure ticket resolution. Provide feedback to
               technical development teams on application modification requests based on user experience.</p>
             <ul>
-              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
-              <li>Do to my performance in this position I was offered a position in a UC Berkeley cohort.
+              <li>Provide technical support and guidance to hundreds of University cohorts.</li>
+              <li>Do to performance, an offer was put out to work with a UC Berkeley cohort.
               </li>
             </ul>
 
             <h5>SUBSTITUTE TEACHING ASSISTANT, 02/2020 – Present</h5>
-            <p>Substitute Teaching Assistant at the University of Oregon for full stack web development cohort. </p>
+            <p>Substitute Teaching Assistant at the University of Oregon for full stack web development cohorts. </p>
             <ul>
-              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
-              <li>I will often have to integrate into a class with students that I am not familiar with to assist them,
-                but can do so easily.
+              <li>Provide technical support and guidance to hundreds of students enrolled in University of Oregon
+                cohorts.</li>
+              <li>Easily integrated into many classrooms to assist student with course work.
               </li>
             </ul>
           </div>
@@ -314,15 +315,21 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy auto mechanics. I spend
-          much of my time researching new technologies, improvements on old ones in the automotive world. I
-          have an addiction to old Porsches. Coming from a small town in Wyoming, that was a much more bold automotive
-          endeavor than old lifted Chevrolet Trucks.
+        <p>Apart from being a web developer, I enjoy auto mechanics. I spend much of my time researching new
+          technologies and improvements on old ones in the automotive world. I have an have a deep obsession with old
+          Porsches. Coming from a small town in Wyoming, that was a much more bold automotive endeavor than old lifted
+          Chevrolet Trucks.
         </p>
-        <p class="mb-0">Really, much of what drives my curiosity in programming steams from my interest in cars. I enjoy
-          learning new technologies, lately, I have taken an interest in single-board computers. Mostly because it
+        <p>Really, much of what drives my curiosity in programming steams from my interest in cars. I enjoy
+          learning new technologies, and lately, I have taken an interest in single-board computers. Mostly because it
           is easy to interface with them using JavaScript. However, I am well aware it is not the hardware engineers
-          language of choice.</p>
+          language of choice.
+        </p>
+        <p>My interest in innovation in particular has lead to a passion that I am working towards being the
+          foundation of my whole life. I dedicate almost all of my free time researching programming languages,
+          engineering, technology, or whatever I feel will push our existence further than we have already came.
+          Although my current language is JavaScript, please feel free to reach out to me for any programming or
+          engineering disciplines. I will likely be very interested.</p>
       </div>
     </section>
 
