minor puncutation and conjunction fixes

--- a/index.html
+++ b/index.html
@@ -113,27 +113,27 @@
               web development cohort. Provide feedback to curriculum development and technical support teams to improve
               in-class experience for students and staff.</p>
             <ul>
-              <li>Provide technical support, guidance and grade assignments for 60+ students.</li>
+              <li>Provide technical support, guidance, and grade assignments for 60+ students.</li>
               <li>Promoted to Primary Teaching Assistant only within 2 months initial hire with excellent work reviews.
               </li>
             </ul>
 
             <h5>JAVASCRIPT LEARNING ASSISTANT, 03/2020 – Present</h5>
             <p>Utilize Beta Slack support application (Trilobot) to provide written technical and conceptual responses
-              to student inquiries. Assist students over video call to ensure ticket resolution. Provide feedback to
+              to student inquiries. Assist students over video calls to ensure ticket resolution. Provide feedback to
               technical development teams on application modification requests based on user experience.</p>
             <ul>
               <li>Provide technical support and guidance to hundreds of University cohorts.</li>
-              <li>Do to performance, an offer was put out to work with a UC Berkeley cohort.
+              <li>Due to performance, an offer was put out to work with a UC Berkeley cohort.
               </li>
             </ul>
 
             <h5>SUBSTITUTE TEACHING ASSISTANT, 02/2020 – Present</h5>
-            <p>Substitute Teaching Assistant at the University of Oregon for full stack web development cohorts. </p>
+            <p>Substitute Teaching Assistant at the University of Oregon for full-stack web development cohorts.</p>
             <ul>
-              <li>Provide technical support and guidance to hundreds of students enrolled in University of Oregon
+              <li>Provide technical support and guidance to hundreds of students enrolled in the University of Oregon
                 cohorts.</li>
-              <li>Easily integrated into many classrooms to assist student with course work.
+              <li>Easily integrated into many classrooms to assist students with course work.
               </li>
             </ul>
           </div>
