industy to industries and practice to practices

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <p class="lead mb-5">Experienced and self-driven developer, able to efficiently integrate and provide support in
           collaborative work environments. Enthusiastic learner with exceptional critical thinking skills to provide new
-          and unique solutions following current industry best practice. Able to communicate effectively and
+          and unique solutions following current industry's best practice. Able to communicate effectively and
           professionally with both clients, teams, and shareholders alike. </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/nathaniel-ryan-88871817b/" target="_blank" data-container="body"
