--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <p class="lead mb-5">Experienced and self-driven developer, able to efficiently integrate and provide support in
           collaborative work environments. Enthusiastic learner with exceptional critical thinking skills to provide new
-          and unique solutions following current industry's best practice. Able to communicate effectively and
+          and unique solutions following the current industries best practices. Able to communicate effectively and
           professionally with both clients, teams, and shareholders alike. </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/nathaniel-ryan-88871817b/" target="_blank" data-container="body"
@@ -90,10 +90,10 @@
             data-placement="top" data-trigger="hover" data-content="Github">
             <i class="fab fa-github"></i>
           </a>
-          <!-- <a href="./document/Resume.pdf" target="_blank" data-container="body" data-toggle="popover"
+          <a href="./document/NathanielRyanResume.pdf" target="_blank" data-container="body" data-toggle="popover"
             data-placement="top" data-trigger="hover" data-content="Download My Resume" download>
             <i class="fas fa-user-tie"></i>
-          </a> -->
+          </a>
         </div>
       </div>
     </section>
