Resume changes, download button icon change, added repo & detail's to projects secion

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </a>
           <a href="./document/NathanielRyanResume.pdf" target="_blank" data-container="body" data-toggle="popover"
             data-placement="top" data-trigger="hover" data-content="Download My Resume" download>
-            <i class="fas fa-user-tie"></i>
+            <i class="fas fa-file-download"></i>
           </a>
         </div>
       </div>
@@ -202,6 +202,21 @@
               <li>Led a group of 5 application developers, delegated roles in the project, determined deadlines, helped
                 contributors with general questions.</li>
               <li>Studied & properly executed a foreign framework in 3 weeks.</li>
+            </ul>
+            <br>
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/Seller2Cellar" target="_blank"
+                data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
+                data-content="Link to Repository">
+                Cellar2Seller</a></h3>
+            <div class="subheading mb-3">Handlebars MVC, Sequelize ORM, Node.js</div>
+            <p>Project roles included Frontend & User Experience. A Social Media/eCommerce hybrid for users to buy &
+              sell wine, update other users with a "status" for wines added to their collection, vineyards visited, etc.
+            </p>
+            <ul>
+              <li>Motivated other group members & collaborated with them to assign tasks according to their skillset.
+              </li>
+              <li>Created a functional application within a 2-week span.
+              </li>
             </ul>
             <br>
             <!-- <h3 class="mb-0"><a href="https://github.com/VolksRat71/advancedReact" target="_blank" data-container="body"
