Various spelling and sentence structural changes, matching resume credentials with portfolio, minor changes to icons

--- a/index.html
+++ b/index.html
@@ -109,39 +109,62 @@
             <h3 class="mb-0">Fullstack Javascript Instructor</h3>
             <div class="subheading mb-3">2u/Trilogy Education</div>
             <h5>PRIMARY JAVASCRIPT TEACHING ASSISTANT, 04/2020 – Present</h5>
+            <p style="font-style: italic;">Technologies: HTML, CSS, JavaScript, jQuery, Bootstrap, Handlebars, React.js,
+              MySQL, MongoDB, Node.js,
+              and Express. Application Security and Session Storage/User, Local storage, Browser Cookies,
+              Authentication,
+              OAuth and Passport.</p>
             <p>Maintain professional relationships with students and instructional staff at UC Berkeley for full-stack
-              web development cohort. Provide feedback to curriculum development and technical support teams to improve
-              in-class experience for students and staff.</p>
+              web
+              development cohort. Provide feedback to curriculum development and technical support teams to improve
+              classroom experience for students and staff.</p>
             <ul>
-              <li>Provide technical support, guidance, and grade assignments for 60+ students.</li>
-              <li>Promoted to Primary Teaching Assistant only within 2 months initial hire with excellent work reviews.
+              <li>Provide technical support and guidance and grade assignments for 40+ students</li>
+              <li>Promoted to Primary Teaching Assistant within 2 months of initial hire with excellent work reviews.
               </li>
             </ul>
 
             <h5>JAVASCRIPT LEARNING ASSISTANT, 03/2020 – Present</h5>
             <p>Utilize Beta Slack support application (Trilobot) to provide written technical and conceptual responses
-              to student inquiries. Assist students over video calls to ensure ticket resolution. Provide feedback to
-              technical development teams on application modification requests based on user experience.</p>
+              to student
+              inquiries. Assist students over video call to ensure ticket resolution. Provide feedback to technical
+              development teams
+              on application modification requests based on user experience.</p>
             <ul>
-              <li>Provide technical support and guidance to hundreds of University cohorts.</li>
-              <li>Due to performance, an offer was put out to work with a UC Berkeley cohort.
-              </li>
+              <li>Collaborate with team members remotely to provide web development support to 5,000+ university
+                students across the United States, UK, and Australia.</li>
             </ul>
 
             <h5>SUBSTITUTE TEACHING ASSISTANT, 02/2020 – Present</h5>
             <p>Substitute Teaching Assistant at the University of Oregon for full-stack web development cohorts.</p>
-            <ul>
-              <li>Provide technical support and guidance to hundreds of students enrolled in the University of Oregon
-                cohorts.</li>
-              <li>Easily integrated into many classrooms to assist students with course work.
-              </li>
-            </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">March 2020 - Present</span>
           </div>
         </div>
-      </div>
+
+        <br>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">RETAIL PARTS PROFESSIONAL</h3>
+            <div class="subheading mb-3">Advance Auto Parts</div>
+            <p style="font-style: italic;">Technologies: Vehicle diagnostics, Windows 7, Electronic Part Catalog, Point
+              of Sale</p>
+            <ul>
+              <li>Exceptionally familiar in automotive mechanics as to accurately answer questions and satisfy customer
+                demands.
+              </li>
+              <li>Aided customers on the sales floor, answer questions, locate automotive products, stocking shelves,
+                taking
+                inventory, and handled returns.
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">November 2016 - Present</span>
+          </div>
+        </div>
 
     </section>
 
@@ -158,7 +181,8 @@
                 data-content="View Credential">University of Oregon</a></h3>
             <div class="subheading mb-3">Fullstack JavaScript Course</div>
             <p>Completed a course provided by University of Oregon on fundamentals and basics of Full Stack Software
-              engineering. More specifically, Javascript functionality in HTML and CSS with training in MySQL and Mongo
+              engineering. Specific areas of study include Javascript functionality in HTML and CSS with training in
+              MySQL and Mongo
               databases.</p>
             <i class="fa fa-chevron-down" aria-hidden="true"><a class="js-scroll-trigger" href="#awards"></i>
             Check out my certifications too!</a>
@@ -195,18 +219,17 @@
                 data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
                 Emit Mobile App</a></h3>
             <div class="subheading mb-3">React Native, Google Firebase</div>
-            <p>My role in this project was Data Storage, User Authentication, Test Environment Specialist, User
-              Experience & Project Manager. A mobile application developed with React Native that allows a user to enter
-              chatrooms based upon a sport topic.</p>
+            <p>Project roles included Data Storage, User Authentication, Test Environment Specialist, User
+              Experience & Project Manager. A mobile application developed with React Native that allows a user
+              to enter chatrooms based upon a sport topic.</p>
             <ul>
               <li>Led a group of 5 application developers, delegated roles in the project, determined deadlines, helped
                 contributors with general questions.</li>
               <li>Studied & properly executed a foreign framework in 3 weeks.</li>
             </ul>
             <br>
-            <h3 class="mb-0"><a href="https://github.com/VolksRat71/Seller2Cellar" target="_blank"
-                data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
-                data-content="Link to Repository">
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/Seller2Cellar" target="_blank" data-container="body"
+                data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
                 Cellar2Seller</a></h3>
             <div class="subheading mb-3">Handlebars MVC, Sequelize ORM, Node.js</div>
             <p>Project roles included Frontend & User Experience. A Social Media/eCommerce hybrid for users to buy &
@@ -219,16 +242,6 @@
               </li>
             </ul>
             <br>
-            <!-- <h3 class="mb-0"><a href="https://github.com/VolksRat71/advancedReact" target="_blank" data-container="body"
-                data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
-                Sick Fits Ecommerce</a></h3>
-            <div class="subheading mb-3">React.js, Apollo Client, GrapghQL Yoga, Prisma</div>
-            <p>This was a course from JavaScript Intructor Wes Bos, it was a in depth look at React.js in Ecommerce and
-              has a functional card transaction</p>
-            <ul>
-              <li>blah blah blah</li>
-              <li>blah blah blah</li>
-            </ul> -->
           </div>
         </div>
     </section>
@@ -258,16 +271,12 @@
             <i class="fab fa-react"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Bootstrap">
-            <i class="devicon-bootstrap-plain"></i>
-          </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Sass">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Node.js">
             <i class="fab fa-node"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="NPM">
+            <i class="fab fa-npm"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Express.js">
@@ -286,24 +295,28 @@
             <i class="fab fa-slack"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="NPM">
-            <i class="fab fa-npm"></i>
-          </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Github">
             <i class="fab fa-github"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="MS-CMD/DOS">
+            <i class="fas fa-terminal"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Git Bash">
             <i class="fab fa-git-alt"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Trello">
-            <i class="devicon-trello-plain"></i>
-          </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Heroku">
             <i class="devicon-heroku-original"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Windows 10">
+            <i class="fab fa-windows"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Ubuntu LTS">
+            <i class="fab fa-ubuntu"></i>
           </li>
         </ul>
 
@@ -330,19 +343,20 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy auto mechanics. I spend much of my time researching new
-          technologies and improvements on old ones in the automotive world. I have an have a deep obsession with old
+        <p>In addition to web development, I also enjoy auto mechanics. I spend much of my time researching new
+          technologies and improvements on old ones in the automotive world. I have a deep obsession with old
           Porsches. Coming from a small town in Wyoming, that was a much more bold automotive endeavor than old lifted
           Chevrolet Trucks.
         </p>
-        <p>Really, much of what drives my curiosity in programming steams from my interest in cars. I enjoy
-          learning new technologies, and lately, I have taken an interest in single-board computers. Mostly because it
-          is easy to interface with them using JavaScript. However, I am well aware it is not the hardware engineers
+        <p>Really, much of what drives my curiosity in programming stems from my interest in cars. I enjoy learning new
+          technologies, and lately have taken an interest in single-board computers, mostly
+          because it is easy to interface with them using JavaScript. However, I am well aware it is not the hardware
+          engineers
           language of choice.
         </p>
-        <p>My interest in innovation in particular has lead to a passion that I am working towards being the
-          foundation of my whole life. I dedicate almost all of my free time researching programming languages,
-          engineering, technology, or whatever I feel will push our existence further than we have already came.
+        <p>My interest in innovation has developed into a passion which I intend to make the foundation of my
+          whole life. I dedicate nearly all of my free time to researching programming languages, engineering,
+          technology, and anything innovative I can get my hands on.
           Although my current language is JavaScript, please feel free to reach out to me for any programming or
           engineering disciplines. I will likely be very interested.</p>
       </div>
