--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p class="lead mb-5">Experienced and self-driven developer, able to efficiently integrate and provide support in
           collaborative work environments. Enthusiastic learner with exceptional critical thinking skills to provide new
           and unique solutions following the current industries best practices. Able to communicate effectively and
-          professionally with both clients, teams, and shareholders alike. </p>
+          professionally with clients, teams, and shareholders alike. </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/nathaniel-ryan-88871817b/" target="_blank" data-container="body"
             data-toggle="popover" data-placement="top" data-trigger="hover" data-content="LinkedIn">
@@ -119,7 +119,7 @@
               development cohort. Provide feedback to curriculum development and technical support teams to improve
               classroom experience for students and staff.</p>
             <ul>
-              <li>Provide technical support and guidance and grade assignments for 40+ students</li>
+              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
               <li>Promoted to Primary Teaching Assistant within 2 months of initial hire with excellent work reviews.
               </li>
             </ul>
@@ -208,7 +208,7 @@
                 DJI Drone Controller</a></h3>
             <div class="subheading mb-3">React.js, Node.js, Socket.io</div>
             <p>Personal project, application with React.js frontend & Node.js backend that gives User Control of a DJI
-              Tello drone via the browser</p>
+              Tello drone via the browser.</p>
             <ul>
               <li>Created communications between drone's I.P address, Node.js server, & React.js User Experience.</li>
               <li>Achieved 3D rendering (pitch, yaw, roll), battery state, drone responses by formatting a string
