Date change on work experience

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <p>Substitute Teaching Assistant at the University of Oregon for full-stack web development cohorts.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2020 - Present</span>
+            <span class="text-primary">February 2020 - Present</span>
           </div>
         </div>
 
@@ -348,7 +348,7 @@
           Porsches. Coming from a small town in Wyoming, that was a much more bold automotive endeavor than old lifted
           Chevrolet Trucks.
         </p>
-        <p>Really, much of what drives my curiosity in programming stems from my interest in cars. I enjoy learning new
+        <p>Much of what drives my curiosity in programming stems from my interest in cars. I enjoy learning new
           technologies, and lately have taken an interest in single-board computers, mostly
           because it is easy to interface with them using JavaScript. However, I am well aware it is not the hardware
           engineers
