add icons to Programming skills section

--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
             <i class="fab fa-react"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Redux">
+            <span class="iconify" data-icon="simple-icons:redux" data-inline="false"></span>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="GraphQL">
+            <span class="iconify" data-icon="simple-icons:graphql" data-inline="false"></span>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Node.js">
             <i class="fab fa-node"></i>
           </li>
@@ -403,6 +411,9 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- iconify CDN -->
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/resume.js"></script>
