updated some technologies in my current role

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h5>PRIMARY JAVASCRIPT TEACHING ASSISTANT, 04/2020 – Present</h5>
             <p style="font-style: italic;">Technologies: HTML, CSS, JavaScript, jQuery, Bootstrap, Handlebars, React.js,
               MySQL, MongoDB, Node.js,
-              and Express. Application Security and Session Storage/User, Local storage, Browser Cookies,
+              Express.js, Redux, GraphQL, Application Security, Session Storage/User, JSON Web Token, Local storage, Browser Cookies,
               Authentication,
               OAuth and Passport.</p>
             <p>Maintain professional relationships with students and instructional staff at UC Berkeley for full-stack
@@ -270,14 +270,14 @@
             data-trigger="hover" data-content="React.js">
             <i class="fab fa-react"></i>
           </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+          <!-- <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Redux">
             <span class="iconify" data-icon="simple-icons:redux" data-inline="false"></span>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="GraphQL">
             <span class="iconify" data-icon="simple-icons:graphql" data-inline="false"></span>
-          </li>
+          </li> -->
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Node.js">
             <i class="fab fa-node"></i>
