--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h1 class="mb-0">Nathaniel
           <span class="text-primary">Ryan</span>
         </h1>
-        <div class="subheading mb-5">Portland, OR 97213 · <span><a href="tel:503-504-7581">(503) 504-7581</a></span> ·
+        <div class="subheading mb-5">Austin, TX 78758 · <span><a href="tel:503-504-7581">(503) 504-7581</a></span> ·
           <a href="mailto:nathanieljryan1994@gmail.com?subject=Hello Nate!"
             target="_blank">nathanieljryan1994@gmail.com</a>
         </div>
@@ -106,25 +106,14 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Fullstack Javascript Instructor</h3>
+            <h3 class="mb-0">Fullstack Web Development Instructor</h3>
             <div class="subheading mb-3">2u/Trilogy Education</div>
-            <h5>PRIMARY JAVASCRIPT TEACHING ASSISTANT, 04/2020 – Present</h5>
-            <p style="font-style: italic;">Technologies: HTML, CSS, JavaScript, jQuery, Bootstrap, Handlebars, React.js,
-              MySQL, MongoDB, Node.js,
-              Express.js, Redux, GraphQL, Application Security, Session Storage/User, JSON Web Token, Local storage, Browser Cookies,
-              Authentication,
-              OAuth and Passport.</p>
-            <p>Maintain professional relationships with students and instructional staff at UC Berkeley for full-stack
-              web
-              development cohort. Provide feedback to curriculum development and technical support teams to improve
-              classroom experience for students and staff.</p>
-            <ul>
-              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
-              <li>Promoted to Primary Teaching Assistant within 2 months of initial hire with excellent work reviews.
-              </li>
-            </ul>
 
-            <h5>JAVASCRIPT LEARNING ASSISTANT, 03/2020 – Present</h5>
+            <h5>FULLSTACK LEARNING ASSISTANT, 03/2020 – Present</h5>
+            <p style="font-style: italic;">Technologies Taught: HTML, CSS, JavaScript, jQuery, Bootstrap, Handlebars,
+              React.js, MySQL, MongoDB, Node.js, Express.js, GraphQL, Redux, Application Security and Session
+              Storage/User, Local storage, Browser Cookies, Authentication, OAuth and Passport.</p>
+
             <p>Utilize Beta Slack support application (Trilobot) to provide written technical and conceptual responses
               to student
               inquiries. Assist students over video call to ensure ticket resolution. Provide feedback to technical
@@ -135,7 +124,21 @@
                 students across the United States, UK, and Australia.</li>
             </ul>
 
-            <h5>SUBSTITUTE TEACHING ASSISTANT, 02/2020 – Present</h5>
+
+            <h5>PRIMARY FULLSTACK TEACHING ASSISTANT, 04/2020 – 11/2020</h5>
+            <p>Maintain professional relationships with students and instructional staff at UC Berkeley for full-stack
+              web
+              development cohort. Provide feedback to curriculum development and technical support teams to improve
+              classroom experience for students and staff.</p>
+            <ul>
+              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
+              <li>Promoted to Primary Teaching Assistant within 2 months of initial hire with excellent work reviews.
+              </li>
+              <li>Completed course 11/01/2020 with great reviews from staff and students.
+              </li>
+            </ul>
+
+            <h5>SUBSTITUTE FULLSTACK TEACHING ASSISTANT, 02/2020 – 10/2020</h5>
             <p>Substitute Teaching Assistant at the University of Oregon for full-stack web development cohorts.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -270,14 +273,14 @@
             data-trigger="hover" data-content="React.js">
             <i class="fab fa-react"></i>
           </li>
-          <!-- <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+          <li class="list-inline-item social-icons" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Redux">
             <span class="iconify" data-icon="simple-icons:redux" data-inline="false"></span>
-          </li>
+          </li></a>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="GraphQL">
             <span class="iconify" data-icon="simple-icons:graphql" data-inline="false"></span>
-          </li> -->
+          </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Node.js">
             <i class="fab fa-node"></i>
