--- a/index.html
+++ b/index.html
@@ -273,14 +273,18 @@
             data-trigger="hover" data-content="React.js">
             <i class="fab fa-react"></i>
           </li>
-          <!-- <li class="list-inline-item social-icons" data-container="body" data-toggle="popover" data-placement="top"
+
+          <!-- Color hover patches for the time being! -->
+          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Redux">
             <span class="iconify" data-icon="simple-icons:redux" data-inline="false"></span>
           </li></a>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="GraphQL">
             <span class="iconify" data-icon="simple-icons:graphql" data-inline="false"></span>
-          </li> -->
+          </li>
+          <!-- End of patches -->
+
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Node.js">
             <i class="fab fa-node"></i>
