adding apollo & prisma to skills

--- a/index.html
+++ b/index.html
@@ -273,30 +273,39 @@
             data-trigger="hover" data-content="React.js">
             <i class="fab fa-react"></i>
           </li>
-
-          <!-- Color hover patches for the time being! -->
-          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Redux">
-            <span class="iconify" data-icon="simple-icons:redux" data-inline="false"></span>
-          </li></a>
-          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="GraphQL">
-            <span class="iconify" data-icon="simple-icons:graphql" data-inline="false"></span>
-          </li>
-          <!-- End of patches -->
-
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Node.js">
             <i class="fab fa-node"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="NPM">
-            <i class="fab fa-npm"></i>
-          </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Express.js">
             <i class="devicon-express-original-wordmark"></i>
           </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="NPM">
+            <i class="fab fa-npm"></i>
+          </li>
+
+          <!-- Color hover patches for the time being! -->
+          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item"
+            data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Redux">
+            <span class="iconify" data-icon="simple-icons:redux" data-inline="false"></span>
+          </li></a>
+          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item"
+            data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
+            data-content="GraphQL">
+            <span class="iconify" data-icon="simple-icons:graphql" data-inline="false"></span>
+          </li>
+          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item"
+            data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Apollo">
+            <span class="iconify" data-icon="file-icons:apollo" data-inline="false"></span>
+          </li>
+          <li onmouseover="this.style.color='#BD5D38'" onmouseout="this.style.color='#868e96'" class="list-inline-item"
+            data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Prisma">
+            <span class="iconify" data-icon="file-icons:prisma" data-inline="false"></span>
+          </li>
+          <!-- End of patches -->
+
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="MySQL">
             <i class="devicon-mysql-plain"></i>
