adding gitlab to skills

--- a/index.html
+++ b/index.html
@@ -323,12 +323,16 @@
             <i class="fab fa-github"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="MS-CMD/DOS">
-            <i class="fas fa-terminal"></i>
+            data-trigger="hover" data-content="Gitlab">
+            <i class="fab fa-gitlab"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Git Bash">
             <i class="fab fa-git-alt"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="MS-CMD/DOS">
+            <i class="fas fa-terminal"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Heroku">
