Adding stackoverflow icon to landing

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
             data-placement="top" data-trigger="hover" data-content="Github">
             <i class="fab fa-github"></i>
           </a>
+          <a href="https://stackoverflow.com/users/11302449/volksrat71?tab=profile" target="_blank"
+            data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
+            data-content="Stack Overflow">
+            <i class="fab fa-stack-overflow"></i>
+          </a>
           <a href="./document/NathanielRyanResume.pdf" target="_blank" data-container="body" data-toggle="popover"
             data-placement="top" data-trigger="hover" data-content="Download My Resume" download>
             <i class="fas fa-file-download"></i>
@@ -329,16 +334,20 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Mobile-First, Responsive Design
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Cross Browser Testing &amp; Debugging
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            Cross Functional Teams
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Agile Development &amp; Scrum
+          </li>
         </ul>
       </div>
     </section>
@@ -385,12 +394,14 @@
             <a href="https://github.com/VolksRat71/certs/blob/master/ES6_Basics.pdf" target="_blank"
               data-toggle="popover" data-placement="left" data-trigger="hover" data-content="View Credential">Modern
               JavaScript
-              ES6 Basics </a> - Coursera Course Certificates June 2020</li>
+              ES6 Basics </a> - Coursera Course Certificates June 2020
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://github.com/VolksRat71/certs/blob/master/Responsive_Website_Basics.pdf" target="_blank"
               data-toggle="popover" data-placement="left" data-trigger="hover" data-content="View Credential">Responsive
-              Website Basics </a> - University of London June 2020</li>
+              Website Basics </a> - University of London June 2020
+          </li>
           <li>
             <i class="fa-li fa fa-chevron-up" aria-hidden="true"></i>
             <a class="js-scroll-trigger" href="#education">Check out my education too!
